--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                   </li>
                </ul>
 
-               //Close button
+               <!--==================== Close button ====================-->
                <div class="nav__close" id="nav-close">
                   <i class="ri-close-large-line"></i>
                </div>
             </div>
             <div class="nav__buttons">
-               //Toggle button
+               <!--==================== Toggle Button ====================-->
                <div class="nav__toggle" id="nav-toggle">
                   <i class="ri-menu-fill"></i>
                </div>
