--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                <!--==================== Close button ====================-->
                <div class="nav__close" id="nav-close">
-                  <i class="ri-close-large-line"></i>
+                  <i class="ri-close-line"></i>
                </div>
             </div>
             <div class="nav__buttons">
