--- a/index.html
+++ b/index.html
@@ -65,7 +65,31 @@
       <main class="main">
          <!--==================== HOME ====================-->
          <section class="home section" id="home">
-            
+            <div class="home__container container grid">
+               <h1 class="home__name">
+                  Chris Berbec
+               </h1>
+               <div class="home__prefil">
+                  <div class="home__image">
+                     <img src="assets/img/home-perfil.jpg" alt="image" class="home__img">
+                     <div class="home__shadow"></div>
+
+                     <img src="assets/img/curved-arrow.svg" alt="" class="home__img">
+                     <img src="assets/img/random-lines.svg" alt="" class="home__line">
+
+                     <div class="geometric-box"></div>
+                  </div>
+
+                  <div class="home__social">
+                     <a href="https://www.linkedin.com/in/christophe-berbec-841599345" target="_blank" class="home_social-link">
+                        <i class="ri-linkedin-box-line"></i>
+                     </a>
+                     <a href="https://github.com/Berbec-Chris" target="_blank" class="home_social-link">
+                        <i class="ri-github-fill"></i>
+                     </a>
+                  </div>
+               </div>
+            </div>
          </section>
 
          <!--==================== ABOUT ====================-->
