--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
                      </a>
                   </div>
                </div>
+
+               <div class="home__info">
+                  <p class="home__description">
+                     Recently graduated <b>Interaction Designer</b> at Malmö University. I am passionate 
+                     about creating digital experiences that are both visually appealing and user-friendly. 
+                     I am currently looking for a job as a Product Designer or UI/UX Designer.
+                  </p>
+                  <a href="#about" class="home__scroll">
+                     <div class="home__scroll-box">
+                        <i class="ri-arrow-down-s-line"></i>
+                     </div>
+
+                     <span class="home__scroll-text">Scroll down</span>
+                  </a>
+               </div>
             </div>
          </section>
 
