--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                <h1 class="home__name">
                   Chris Berbec
                </h1>
-               <div class="home__prefil">
+               <div class="home__prefill">
                   <div class="home__image">
                      <img src="assets/img/home-perfil.JPG" alt="image" class="home__img">
                      <div class="home__shadow"></div>
