--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                <h2 class="section__title-1">About Me</h2>
                <div class="about__prefil">
                   <div class="about__image">
-                     <img src="assets/img/about-perfil.jpg" alt="image" class="about__img">
+                     <img src="" alt="image" class="about__img">
                      
                      <div class="about__shadow"></div>
 
@@ -147,7 +147,34 @@
 
          <!--==================== PROJECTS ====================-->
          <section class="projects section" id="projects">
-            
+            <h2 class="section__title-1">
+               <span>Projects</span>
+            </h2>
+            <div class="projects__container container grid">
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle"></h3>
+                     <h2 class="__projects__title"></h2>
+
+                     <p class="projects__description">
+                        Project number 1 description box. This is a description of the project number 1.
+                     </p>
+                  </div>
+                  <div class="projects__buttons">
+                     <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i>
+                     </a>
+                  </div>
+               </article>
+            </div>
          </section>
 
          <!--==================== CONTACT ====================-->
