--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle"></h3>
-                     <h2 class="__projects__title"></h2>
+                     <h3 class="projects__subtitle">WRC: Promoting User-Engagement through Interactive Media</h3>
+                     <h2 class="__projects__title">Project 1</h2>
 
                      <p class="projects__description">
                         Project number 1 description box. This is a description of the project number 1.
