--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
          <section class="home section" id="home">
             <div class="home__container container grid">
                <h1 class="home__name">
-                  Chris Berbec
+                  Home
                </h1>
                <div class="home__prefill">
                   <div class="home__image">
