--- a/index.html
+++ b/index.html
@@ -168,6 +168,14 @@
                         Project number 1 description box. This is a description of the project number 1.
                      </p>
                   </div>
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">Poppy the Shy Wall</h3>
+                     <h2 class="__projects__title">Individual Studio II Project</h2>
+
+                     <p class="projects__description">
+                        Project number 2 description box. This is a description of the project number 2.
+                     </p>
+                  </div>
                   <div class="projects__buttons">
                      <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
                         <i class="ri-github-line"></i>
