--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                <span>Projects</span>
             </h2>
             <div class="projects__container container grid">
+
                <article class="projects__card">
                   <div class="projects__image">
                      <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
@@ -168,10 +169,26 @@
                         Project number 1 description box. This is a description of the project number 1.
                      </p>
                   </div>
+                  <div class="projects__buttons">
+                     <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i>
+                     </a>
+                  </div>
+               </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-2.jpg" alt="image" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
                   <div class="projects__content">
                      <h3 class="projects__subtitle">Poppy the Shy Wall</h3>
                      <h2 class="__projects__title">Individual Studio II Project</h2>
-
+   
                      <p class="projects__description">
                         Project number 2 description box. This is a description of the project number 2.
                      </p>
