--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                </h1>
                <div class="home__prefill">
                   <div class="home__image">
-                     <img src="assets/img/home-prefil.JPG" alt="image" class="home__img">
+                     <img src="assets/img/home-prefil.jpg" alt="image" class="home__img">
                      <div class="home__shadow"></div>
 
                      <img src="assets/img/curved-arrow.svg" alt="" class="home__img">
