--- a/index.html
+++ b/index.html
@@ -199,6 +199,32 @@
                      </a>
                   </div>
                </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-3.jpg" alt="image" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">Hand-in PDF Archive</h3>
+                     <h2 class="__projects__title">Interactivity Course Journal</h2>
+   
+                     <p class="projects__description">
+                        Module 1: Exploring expressivity with point lights.
+                        Module 2: Nuanced control with sound.
+                        Module 3: Kinaesthetic Interaction & Machine Learning.
+                     </p>
+                  </div>
+                  <div class="projects__buttons">
+                     <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i>
+                     </a>
+                  </div>
+               </article>
             </div>
          </section>
 
