--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   </p>
                   <a href="#about" class="home__scroll">
                      <div class="home__scroll-box">
-                        <i class="ri-arrow-down-s-line" style="color: white;"></i>
+                        <i class="ri-arrow-down-s-line"></i>
                      </div>
 
                      <span class="home__scroll-text">Scroll down</span>
