--- a/index.html
+++ b/index.html
@@ -94,34 +94,37 @@
         </section>
 
          <!--==================== ABOUT ====================-->
-         <section class="projects section" id="projects">
-            <h2 class="section__title-1">
-                <span>Projects</span>
-            </h2>
-            <div class="projects__container container grid">
-                <article class="projects__card">
-                    <div class="projects__image">
-                        <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
-                        <a href="#" class="projects__button button">
-                            <i class="ri-arrow-right-up-line"></i>
-                        </a>
-                    </div>
-                    <div class="projects__content">
-                        <h3 class="projects__subtitle">WRC: Promoting User-Engagement through Interactive Media</h3>
-                        <h2 class="projects__title">Final Degree Project</h2>
-                        <p class="projects__description">
-                            Project number 1 description box. This is a description of the project number 1.
-                        </p>
-                    </div>
-                    <div class="projects__buttons">
-                        <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
-                            <i class="ri-github-line"></i>
-                        </a>
-                    </div>
-                </article>
-                <!-- Repeat for other projects -->
+         <section class="about section" id="about">
+            <div class="abput__container container grid">
+               <h2 class="section__title-1">About Me</h2>
+               <div class="about__prefil">
+                  <div class="about__image">
+                     <img src="" alt="image" class="about__img">
+                     
+                     <div class="about__shadow"></div>
+
+                     <div class="geometric-box"></div>
+                     <img src="assets/img/random-lines.svg" alt="" class="about__line">
+                     <div class="about__box"></div>
+                  </div>
+               </div>
+               <div class="about__info">
+                  <p class="about__description">
+                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                  </p>
+                  <ul class="about__list">
+                     <li class="about__item">
+                        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+                         eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem
+                         quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                     </li>
+                  </ul>
+               </div>
             </div>
-        </section>
+         </section>
 
          <!--==================== SERVICES ====================-->
          <section class="services section">
