--- a/index.html
+++ b/index.html
@@ -134,36 +134,86 @@
          <!--==================== PROJECTS ====================-->
          <section class="projects section" id="projects">
             <h2 class="section__title-1">
-                <span>Projects</span>
+               <span>Projects</span>
             </h2>
             <div class="projects__container container grid">
-                <article class="projects__card">
-                    <div class="projects__image">
-                        <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
-                        <a href="#" class="projects__button button">
-                            <i class="ri-arrow-right-up-line"></i>
-                        </a>
-                    </div>
-                    <div class="projects__content">
-                        <h3 class="projects__subtitle">WRC: Promoting User-Engagement through Interactive Media</h3>
-                        <h2 class="projects__title">Final Degree Project</h2>
-                        <p class="projects__description">
-                            Project number 1 description box. This is a description of the project number 1.
-                        </p>
-                    </div>
-                    <div class="projects__buttons">
-                        <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
-                            <i class="ri-github-line"></i>
-                        </a>
-                    </div>
-                </article>
-                <!-- Repeat for other projects -->
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">WRC: Promoting User-Engagement through Interactive Media</h3>
+                     <h2 class="__projects__title">Final Degree Project</h2>
+
+                     <p class="projects__description">
+                        Project number 1 description box. This is a description of the project number 1.
+                     </p>
+                  </div>
+                  <div class="projects__buttons">
+                     <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i>
+                     </a>
+                  </div>
+               </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-2.jpg" alt="image" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">Poppy the Shy Wall</h3>
+                     <h2 class="__projects__title">Individual Studio II Project</h2>
+   
+                     <p class="projects__description">
+                        Project number 2 description box. This is a description of the project number 2.
+                     </p>
+                  </div>
+                  <div class="projects__buttons">
+                     <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i>
+                     </a>
+                  </div>
+               </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-3.jpg" alt="image" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">Hand-in PDF Archive</h3>
+                     <h2 class="__projects__title">Interactivity Course Journal</h2>
+   
+                     <p class="projects__description">
+                        Module 1: Exploring expressivity with point lights.
+                        Module 2: Nuanced control with sound.
+                        Module 3: Kinaesthetic Interaction & Machine Learning.
+                     </p>
+                  </div>
+                  <div class="projects__buttons">
+                     <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i>
+                     </a>
+                  </div>
+               </article>
             </div>
-        </section>
-         <!--==================== CONTACT ====================-->
-         <section class="contact section" id="contact">
-            
          </section>
+
       </main>
 
       <!--==================== FOOTER ====================-->
