--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
                 <h1 class="home__name">Home</h1>
                 <div class="home__prefill">
                     <div class="home__image">
-                        <img src="assets/img/home-prefil.jpg" alt="image" class="home__img">
-                        <div class="home__shadow"></div>
+                        <div class="home__shadow">
+                           <img src="assets/img/home-prefil.jpg" alt="image" class="home__img">
+                        </div>
                         <img src="assets/img/curved-arrow.svg" alt="" class="home__img">
                         <img src="assets/img/random-lines.svg" alt="" class="home__line">
                         <div class="geometric-box"></div>
