--- a/index.html
+++ b/index.html
@@ -211,6 +211,33 @@
                      </a>
                   </div>
                </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-4.jpg" alt="image" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">Hand-in PDF Archive</h3>
+                     <h2 class="__projects__title">Tangible and Embodied Interaction(TEI) Course Journal</h2>
+   
+                     <p class="projects__description">
+                        Module 1: Glanceability : Designing for Glanceable Interfaces (Smartwatches, Dashboards, etc.)
+                        Module 2: Smell and Vortex Propagation : Olfactory Interaction with Pr. Simon Niedenthal
+                        Module 3: Soft : Interactivity on Soft Media (Fabrics, Paper, etc.)
+                        Module 4: IoT & AI : Internet of Things and Artificial Intelligence
+                     </p>
+                  </div>
+                  <div class="projects__buttons">
+                     <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i>
+                     </a>
+                  </div>
+               </article>
             </div>
          </section>
 
