--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       <main class="main">
          <!--==================== HOME ====================-->
          <section class="home section" id="home">
+            <h1 class="home__name">Chris Berbec</h1>
             <div class="home__container container grid">
-                <h1 class="home__name">Home</h1>
                 <div class="home__prefill">
                     <div class="home__image">
                         <img src="assets/img/home-prefil.jpg" alt="image" class="home__img">
