--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
                      <h2 class="__projects__title">Tangible and Embodied Interaction(TEI) Course Journal</h2>
    
                      <p class="projects__description">
-                        Module 1: Glanceability : Designing for Glanceable Interfaces (Smartwatches, Dashboards, etc.)
-                        Module 2: Smell and Vortex Propagation : Olfactory Interaction with Pr. Simon Niedenthal
-                        Module 3: Soft : Interactivity on Soft Media (Fabrics, Paper, etc.)
-                        Module 4: IoT & AI : Internet of Things and Artificial Intelligence
+                        Module 1: Glanceability
+                        Module 2: Smell and Vortex Propagation
+                        Module 3: Soft : Interactivity on Soft Media
+                        Module 4: IoT & AI
                      </p>
                   </div>
                   <div class="projects__buttons">
