--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="home__image">
                         <img src="assets/img/home-prefil.jpg" alt="image" class="home__img">
                         <div class="home__shadow"></div>
-                        <img src="assets/img/curved-arrow.svg" alt="" class="home__arrow">
+                        <!--img src="assets/img/curved-arrow.svg" alt="" class="home__arrow"-->
                         <img src="assets/img/random-lines.svg" alt="" class="home__line">
                         <div class="geometric-box"></div>
                         <div class="home__social">
