--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                      <p class="projects__description">
                         Module 1: Glanceability
                         Module 2: Smell and Vortex Propagation
-                        Module 3: Soft : Interactivity on Soft Media
+                        Module 3: Soft
                         Module 4: IoT & AI
                      </p>
                   </div>
