--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <main class="main">
          <!--==================== HOME ====================-->
          <section class="home section" id="home">
-            <!--h1 class="home__name">Chris Berbec</h1-->
+            <h1 class="home__name">Chris Berbec</h1>
             <div class="home__container container grid">
                 <div class="home__prefill">
                     <div class="home__image">
