--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
                      <h2 class="__projects__title">Interactivity Course Journal</h2>
    
                      <p class="projects__description">
-                        Module 1: Exploring expressivity with point lights.
-                        Module 2: Nuanced control with sound.
-                        Module 3: Kinaesthetic Interaction & Machine Learning.
+                        <li>Module 1: Exploring expressivity with point lights.</li>
+                        <li>Module 2: Nuanced control with sound.</li>
+                        <li>Module 3: Kinaesthetic Interaction & Machine Learning.</li>
                      </p>
                   </div>
                   <div class="projects__buttons">
@@ -226,10 +226,10 @@
                      <h2 class="__projects__title">Tangible and Embodied Interaction(TEI) Course Journal</h2>
    
                      <p class="projects__description">
-                        Module 1: Glanceability
-                        Module 2: Smell and Vortex Propagation
-                        Module 3: Soft
-                        Module 4: IoT & AI
+                        <li>Module 1: Glanceability</li>
+                        <li>Module 2: Smell and Vortex Propagation</li>
+                        <li>Module 3: Soft</li>
+                        <li>Module 4: IoT & AI</li>
                      </p>
                   </div>
                   <div class="projects__buttons">
