--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle">WRC: Promoting User-Engagement through Interactive Media</h3>
-                     <h2 class="__projects__title">Final Degree Project</h2>
+                     <h3 class="projects__subtitle">Increasing User Engagement in Online FIA WRC Broadcasts</h3>
+                     <h2 class="__projects__title">Final Degree Thesis Project</h2>
 
                      <p class="projects__description">
-                        Project number 1 description box. This is a description of the project number 1.
+                        How can Interactive Technologies be Leveraged to Increase User Engagement in the FIA World Rally Championship Online Broadcasting Platform?                        
                      </p>
                   </div>
                   <div class="projects__buttons">
@@ -176,7 +176,7 @@
                      <h2 class="__projects__title">Individual Studio II Project</h2>
    
                      <p class="projects__description">
-                        Project number 2 description box. This is a description of the project number 2.
+                        Poppy the Shy Wall: A material exploration of AI body detection in the context of Architecture-centred Interaction Design
                      </p>
                   </div>
                   <div class="projects__buttons">
