--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                      <h2 class="__projects__title">Individual Studio II Project</h2>
    
                      <p class="projects__description">
-                        Poppy the Shy Wall: A material exploration of AI body detection in the context of Architecture-centred Interaction Design
+                        A material exploration of AI body detection in the context of Architecture-centred Interaction Design
                      </p>
                   </div>
                   <div class="projects__buttons">
