--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Portfolio Website Chris</title>
+      <title>Portfolio Website Christophe</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -21,7 +21,7 @@
          <nav class="nav container">
              <a href="#" class="nav__logo">
                  <span class="nav__logo-circle">C</span>
-                 <span class="nav__logo-name">Chris Berbec</span>
+                 <span class="nav__logo-name">Christophe Berbec</span>
              </a>
      
              <div class="nav__menu" id="nav-menu">
@@ -58,7 +58,7 @@
       <main class="main">
          <!--==================== HOME ====================-->
          <section class="home section" id="home">
-            <h1 class="home__name">Chris Berbec</h1>
+            <h1 class="home__name">Christophe Berbec</h1>
             <div class="home__container container grid">
                 <div class="home__prefill">
                     <div class="home__image">
@@ -99,7 +99,7 @@
                <h2 class="section__title-1">About Me</h2>
                <div class="about__prefil">
                   <div class="about__image">
-                     <img src="" alt="image" class="about__img">
+                     <img src="assets/img/about-prefil.jpg" alt="image" class="about__img">
                      
                      <div class="about__shadow"></div>
 
@@ -110,17 +110,19 @@
                </div>
                <div class="about__info">
                   <p class="about__description">
-                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                     My experience spans freelance consulting in UX/UI design, architectural visualization, and event organization, 
+                     equipping me with a versatile skill set that combines technical expertise with creative problem-solving. 
+                     I have collaborated with businesses, independent developers, and architects to deliver projects
+                      that align with user needs and business objectives.
                   </p>
                   <ul class="about__list">
                      <li class="about__item">
-                        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                         eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem
-                         quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                     </li>
+                     Proficient in design tools such as Adobe Creative Suite, Figma, and AutoCAD, 
+                     I also have a foundational understanding of programming languages including 
+                     HTML, CSS, JavaScript, and Python. My ability to analyze complex challenges, 
+                     synthesize solutions, and adapt to dynamic environments makes me a valuable asset to any design team. 
+                     I am currently seeking opportunities where I can apply my skills in interaction design and UX/UI 
+                     to contribute to innovative projects and create impactful digital experiences.</li>
                   </ul>
                </div>
             </div>
