--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
          <!--==================== ABOUT ====================-->
          <section class="about section" id="about">
-            <div class="abput__container container grid">
+            <div class="about__container container grid">
                <h2 class="section__title-1">About Me</h2>
                <div class="about__prefil">
                   <div class="about__image">
