--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
                      Proficient in design tools such as Adobe Creative Suite, Figma, and AutoCAD, 
                      I also have a foundational understanding of programming languages including 
                      HTML, CSS, JavaScript, and Python. My ability to analyze complex challenges, 
-                     synthesize solutions, and adapt to dynamic environments makes me a valuable asset to any design team. 
-                     I am currently seeking opportunities where I can apply my skills in interaction design and UX/UI 
+                     synthesize solutions, and adapt to dynamic environments makes me a valuable asset to any design team.</li>
+                     <li></li>
+                     <li>I am currently seeking opportunities where I can apply my skills in interaction design and UX/UI 
                      to contribute to innovative projects and create impactful digital experiences.</li>
                   </ul>
                </div>
