--- a/index.html
+++ b/index.html
@@ -96,7 +96,18 @@
          <!--==================== ABOUT ====================-->
          <section class="about section" id="about">
             <div class="about__container container grid">
-               <h2 class="section__title-1">About Me</h2>
+               <div class="about__left-column">
+                  <h2 class="section__title-1">About Me</h2>
+                  <div class="about__prefil">
+                     <div class="about__image">
+                        <img src="assets/img/about-prefil.jpg" alt="image" class="about__img">
+                        <div class="about__shadow"></div>
+                        <div class="geometric-box"></div>
+                        <img src="assets/img/random-lines.svg" alt="" class="about__line">
+                        <div class="about__box"></div>
+                     </div>
+                  </div>
+               </div>
                <div class="about__info">
                   <p class="about__description">
                      My experience spans freelance consulting in UX/UI design, architectural visualization, and event organization, 
@@ -114,17 +125,6 @@
                      <li>I am currently seeking opportunities where I can apply my skills in interaction design and UX/UI 
                      to contribute to innovative projects and create impactful digital experiences.</li>
                   </ul>
-               </div>
-               <div class="about__prefil">
-                  <div class="about__image">
-                     <img src="assets/img/about-prefil.jpg" alt="image" class="about__img">
-                     
-                     <div class="about__shadow"></div>
-
-                     <div class="geometric-box"></div>
-                     <img src="assets/img/random-lines.svg" alt="" class="about__line">
-                     <div class="about__box"></div>
-                  </div>
                </div>
             </div>
          </section>
