--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
          <!--==================== PROJECTS ====================-->
          <section class="projects section" id="projects">
-            <h2 class="section__title-1">
+            <h2 class="section__title-1" style="text-align: center;">
                <span>Projects</span>
             </h2>
             <div class="projects__container container grid">
