--- a/index.html
+++ b/index.html
@@ -241,6 +241,56 @@
                      </a>
                   </div>
                </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-5.jpg" alt="image" class="projects__img">
+
+                     <a href="https://berbec-chris.github.io/assets/pages/project-5-page.pdf" target="_blank" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">3D Visualisations</h3>
+                     <h2 class="__projects__title">Mathendahl, Niederkorn, Luxembourg</h2>
+   
+                     <p class="projects__description">
+                        <li>Project for Agence d'Architecture Stan Berbec</li>
+                     </p>
+                  </div>
+                  <div class="projects__buttons">
+                     <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i>
+                     </a>
+                  </div>
+               </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-6.jpg" alt="image" class="projects__img">
+
+                     <a href="https://berbec-chris.github.io/assets/pages/project-6-page.pdf" target="_blank" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">2D Blueprints, 3D Visualisations</h3>
+                     <h2 class="__projects__title">Pfaffenthal, Luxembourg</h2>
+   
+                     <p class="projects__description">
+                        <li>Iterative Design in 2D, modifying plans according to stakeholders needs.</li>
+                        <li>Modelling in 3D to help stakeholders visualise project.</li>
+                     </p>
+                  </div>
+                  <div class="projects__buttons">
+                     <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i>
+                     </a>
+                  </div>
+               </article>
+
             </div>
          </section>
 
