--- a/index.html
+++ b/index.html
@@ -322,7 +322,14 @@
 
       <!--==================== FOOTER ====================-->
       <footer class="footer">
-         
+         <div class="footer__container">
+            <div class="footer__social">
+               <a href="#" class="footer__social-link"><i class="fab fa-facebook-f"></i></a>
+               <a href="#" class="footer__social-link"><i class="fab fa-twitter"></i></a>
+               <a href="#" class="footer__social-link"><i class="fab fa-instagram"></i></a>
+            </div>
+            <p class="footer__text">© 2023 Your Name. All rights reserved.</p>
+         </div>
       </footer>
 
       <!--========== SCROLL UP ==========-->
