--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
          <!--==================== PROJECTS ====================-->
          <section class="projects section" id="projects">
-            <h2 class="section__title-3">
+            <h2 class="section__title-3" style="text-align: center; width: 100%;">
                <span>Projects</span>
             </h2>
             <div class="projects__container container grid">
@@ -151,8 +151,8 @@
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle">Increasing User Engagement in Online FIA WRC Broadcasts</h3>
-                     <h2 class="__projects__title">Final Degree Thesis Project</h2>
+                     <h3 class="projects__subtitle" style="text-align: center;">Increasing User Engagement in Online FIA WRC Broadcasts</h3>
+                     <h2 class="projects__title" style="text-align: center;">Final Degree Thesis Project</h2>
 
                      <p class="projects__description">
                         How can Interactive Technologies be Leveraged to Increase User Engagement in the FIA World Rally Championship Online Broadcasting Platform?                        
@@ -175,8 +175,8 @@
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle">Poppy the Shy Wall</h3>
-                     <h2 class="__projects__title">Individual Studio II Project</h2>
+                     <h3 class="projects__subtitle" style="text-align: center;">Poppy the Shy Wall</h3>
+                     <h2 class="projects__title" style="text-align: center;">Individual Studio II Project</h2>
    
                      <p class="projects__description">
                         A material exploration of AI body detection in the context of Architecture-centred Interaction Design
@@ -199,8 +199,8 @@
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle">Hand-in PDF Archive</h3>
-                     <h2 class="__projects__title">Interactivity Course Journal</h2>
+                     <h3 class="projects__subtitle" style="text-align: center;">Hand-in PDF Archive</h3>
+                     <h2 class="projects__title" style="text-align: center;">Interactivity Course Journal</h2>
    
                      <p class="projects__description">
                         <li>Module 1: Exploring expressivity with point lights.</li>
@@ -225,8 +225,8 @@
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle">Hand-in PDF Archive</h3>
-                     <h2 class="__projects__title">Tangible and Embodied Interaction(TEI) Course Journal</h2>
+                     <h3 class="projects__subtitle" style="text-align: center;">Hand-in PDF Archive</h3>
+                     <h2 class="projects__title" style="text-align: center;">Tangible and Embodied Interaction(TEI) Course Journal</h2>
    
                      <p class="projects__description">
                         <li>Module 1: Glanceability</li>
@@ -252,8 +252,8 @@
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle">3D Visualisations</h3>
-                     <h2 class="__projects__title">Mathendahl, Niederkorn, Luxembourg</h2>
+                     <h3 class="projects__subtitle" style="text-align: center;">3D Visualisations</h3>
+                     <h2 class="projects__title" style="text-align: center;">Mathendahl, Niederkorn, Luxembourg</h2>
    
                      <p class="projects__description">
                         <li>Project for Agence d'Architecture Stan Berbec</li>
@@ -276,8 +276,8 @@
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle">2D Blueprints, 3D Visualisations</h2>
-                     <h2 class="__projects__title">Pfaffenthal, Luxembourg</h2>
+                     <h3 class="projects__subtitle" style="text-align: center;">2D Blueprints, 3D Visualisations</h3>
+                     <h2 class="projects__title" style="text-align: center;">Pfaffenthal, Luxembourg</h2>
    
                      <p class="projects__description">
                         <li>Iterative Design in 2D, modifying plans according to stakeholders needs.</li>
