--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
       <link rel="stylesheet" href="assets/css/styles.css">
 
       <title>Portfolio Website Christophe</title>
+
+      <style>
+         /* Add this CSS inside the <head> section */
+         @media (min-width: 768px) {
+             .nav__list-desktop {
+                 display: flex;
+                 gap: 20px;
+                 margin-left: auto;
+             }
+             .nav__list-desktop .nav__item {
+                 list-style: none;
+             }
+             .nav__list-desktop .nav__link {
+                 text-decoration: none;
+                 color: #000;
+             }
+         }
+      </style>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -51,6 +69,21 @@
                      <i class="ri-menu-fill"></i>
                  </div>
              </div>
+
+             <ul class="nav__list-desktop">
+                 <li class="nav__item">
+                     <a href="#home" class="nav__link">Home</a>
+                 </li>
+                 <li class="nav__item">
+                     <a href="#about" class="nav__link">About Me</a>
+                 </li>
+                 <li class="nav__item">
+                     <a href="#projects" class="nav__link">Projects</a>
+                 </li>
+                 <li class="nav__item">
+                     <a href="#contact" class="nav__link">Contact Me</a>
+                 </li>
+             </ul>
          </nav>
      </header>
 
