--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <h2 class="section__title-3" style="text-align: center; width: 100%;">
                <span>Projects</span>
             </h2>
-            <div class="projects__container container grid">
+            <div class="projects__container">
 
                <article class="projects__card">
                   <div class="projects__image">
