--- a/index.html
+++ b/index.html
@@ -31,6 +31,33 @@
                  color: #000;
              }
          }
+         .contact__popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+         }
+         .contact__popup.active {
+            display: block;
+         }
+         .contact__overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+         }
+         .contact__overlay.active {
+            display: block;
+         }
       </style>
    </head>
    <body>
@@ -333,23 +360,28 @@
                <span>Contact Me</span>
             </h2>
             <div class="contact__container container grid">
-               <form action="https://formspree.io/f/berch730@gmail.com" method="POST" class="contact__form">
-                  <div class="contact__form-group">
-                     <label for="name" class="contact__form-label">Name</label>
-                     <input type="text" id="name" name="name" class="contact__form-input" required>
-                  </div>
-                  <div class="contact__form-group">
-                     <label for="email" class="contact__form-label">Email</label>
-                     <input type="email" id="email" name="email" class="contact__form-input" required>
-                  </div>
-                  <div class="contact__form-group">
-                     <label for="message" class="contact__form-label">Message</label>
-                     <textarea id="message" name="message" class="contact__form-input" rows="5" required></textarea>
-                  </div>
-                  <button type="submit" class="contact__form-button">Send Message</button>
-               </form>
+               <button class="contact__button" id="contact-button">Get in Touch</button>
             </div>
          </section>
+
+         <div class="contact__overlay" id="contact-overlay"></div>
+         <div class="contact__popup" id="contact-popup">
+            <form action="https://formspree.io/f/berch730@gmail.com" method="POST" class="contact__form">
+               <div class="contact__form-group">
+                  <label for="name" class="contact__form-label">Name</label>
+                  <input type="text" id="name" name="name" class="contact__form-input" required>
+               </div>
+               <div class="contact__form-group">
+                  <label for="email" class="contact__form-label">Email</label>
+                  <input type="email" id="email" name="email" class="contact__form-input" required>
+               </div>
+               <div class="contact__form-group">
+                  <label for="message" class="contact__form-label">Message</label>
+                  <textarea id="message" name="message" class="contact__form-input" rows="5" required></textarea>
+               </div>
+               <button type="submit" class="contact__form-button">Send Message</button>
+            </form>
+         </div>
 
       </main>
 
@@ -376,5 +408,15 @@
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
+      <script>
+         document.getElementById('contact-button').addEventListener('click', function() {
+            document.getElementById('contact-popup').classList.add('active');
+            document.getElementById('contact-overlay').classList.add('active');
+         });
+         document.getElementById('contact-overlay').addEventListener('click', function() {
+            document.getElementById('contact-popup').classList.remove('active');
+            document.getElementById('contact-overlay').classList.remove('active');
+         });
+      </script>
    </body>
 </html>
