--- a/index.html
+++ b/index.html
@@ -321,6 +321,8 @@
 
          <div class="contact__overlay" id="contact-overlay"></div>
          <div class="contact__popup" id="contact-popup">
+            <p class="contact__placeholder">Feel free to reach out to me for any inquiries or collaborations!</p>
+            <img src="assets/img/contact-extra.jpg" alt="Extra Picture" class="contact__extra-picture">
             <form action="https://formspree.io/f/berch730@gmail.com" method="POST" class="contact__form">
                <div class="contact__form-group">
                   <label for="name" class="contact__form-label">Name</label>
