--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                <a href="#" class="footer__social-link"><i class="fab fa-twitter"></i></a>
                <a href="#" class="footer__social-link"><i class="fab fa-instagram"></i></a>
             </div>
-            <p class="footer__text">© 2023 Your Name. All rights reserved.</p>
+            <p class="footer__text">© 2025 Christophe Berbec. All rights reserved.</p>
          </div>
       </footer>
 
@@ -365,21 +365,5 @@
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
-      <script>
-         document.getElementById('contact-button').addEventListener('click', function() {
-            document.getElementById('contact-popup').classList.add('active');
-            document.getElementById('contact-overlay').classList.add('active');
-         });
-         document.getElementById('contact-overlay').addEventListener('click', function() {
-            document.getElementById('contact-popup').classList.remove('active');
-            document.getElementById('contact-overlay').classList.remove('active');
-         });
-         document.getElementById('nav-toggle').addEventListener('click', function() {
-            document.getElementById('nav-menu').classList.toggle('show-menu');
-         });
-         document.getElementById('nav-close').addEventListener('click', function() {
-            document.getElementById('nav-menu').classList.remove('show-menu');
-         });
-      </script>
    </body>
 </html>
