--- a/index.html
+++ b/index.html
@@ -82,14 +82,6 @@
                         <!--img src="assets/img/curved-arrow.svg" alt="" class="home__arrow"-->
                         <img src="assets/img/random-lines.svg" alt="" class="home__line">
                         <div class="geometric-box"></div>
-                        <div class="home__social">
-                            <a href="https://www.linkedin.com/in/christophe-berbec-841599345" target="_blank" class="home_social-link">
-                                <i class="ri-linkedin-box-line"></i>
-                            </a>
-                            <a href="https://github.com/Berbec-Chris" target="_blank" class="home_social-link">
-                                <i class="ri-github-fill"></i>
-                            </a>
-                        </div>
                     </div>
                 </div>
                 <div class="home__info">
@@ -103,6 +95,14 @@
                             <i class="ri-arrow-down-s-line"></i>
                         </div>
                         <span class="home__scroll-text">Scroll down</span>
+                    </a>
+                </div>
+                <div class="home__social">
+                    <a href="https://www.linkedin.com/in/christophe-berbec-841599345" target="_blank" class="home__social-link">
+                        <i class="ri-linkedin-box-line"></i>
+                    </a>
+                    <a href="https://github.com/Berbec-Chris" target="_blank" class="home__social-link">
+                        <i class="ri-github-fill"></i>
                     </a>
                 </div>
             </div>
