--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
                   </ul>
                </div>
             </div>
+            <a href="#projects" class="about__scroll">
+                <div class="about__scroll-box">
+                    <i class="ri-arrow-down-s-line"></i>
+                </div>
+            </a>
          </section>
 
          <!--==================== SERVICES ====================-->
