--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
          <!--==================== ABOUT ====================-->
          <section class="about section" id="about">
             <h2 class="section__title-1">About Me</h2>
-            <div class="about__container container grid">
+            <div class="about__container container">
                <div class="about__left-column">
                   <div class="about__prefil">
                      <div class="about__image">
@@ -151,7 +151,7 @@
 
          <!--==================== SERVICES ====================-->
          <section class="services section">
-            
+            <!-- Add content here if needed -->
          </section>
 
          <!--==================== PROJECTS ====================-->
