--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <!-- Add content here if needed -->
          </section>
 
-         <!--==================== PROJECTS ====================-->
+         <!--==================== PROJECTS ===================-->
          <section class="projects section" id="projects">
             <h2 class="section__title-3" style="text-align: center; width: 100%;">
                <span>Projects</span>
