Fix minor grammatical issue in about section description

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                   <p class="about__description">
                      My experience spans freelance consulting in UX/UI design, architectural visualization, and event organization, 
                      equipping me with a versatile skill set that combines technical expertise with creative problem-solving. 
-                     I have collaborated with businesses, independent developers, and architects to deliver projects
-                      that align with user needs and business objectives.
+                     I have collaborated with businesses, independent developers, and architects, to deliver projects
+                     that align with user needs and business objectives.
                   </p>
                   <ul class="about__list">
                      <li class="about__item">
