Enhance project gallery: hide scrollbars, adjust arrow styles, and update scroll step for improved navigation

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                 Modelling in 3D to help stakeholders visualise project.
                             </p>
                         </div>
-                        <div class="projects__buttons"></div>
+                        <div class="projects__buttons">
                             <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
                                 <i class="ri-github-line"></i>
                             </a>
