Add services section styles: implement grid layout, card hover effects, and responsive design

--- a/index.html
+++ b/index.html
@@ -150,9 +150,34 @@
          </section>
 
          <!--==================== SERVICES ====================-->
-         <section class="services section">
-            <!-- Add content here if needed -->
-         </section>
+         <section class="services section" id="services">
+            <h2 class="section__title-3" style="text-align: center; width: 100%;">
+                <span>Services</span>
+            </h2>
+            <div class="services__container container grid">
+                <div class="services__card">
+                    <i class="ri-pencil-ruler-2-line services__icon"></i>
+                    <h3 class="services__title">UI/UX Design</h3>
+                    <p class="services__description">
+                        Creating visually appealing and user-friendly interfaces for web and mobile applications.
+                    </p>
+                </div>
+                <div class="services__card">
+                    <i class="ri-code-s-slash-line services__icon"></i>
+                    <h3 class="services__title">Web Development</h3>
+                    <p class="services__description">
+                        Building responsive and interactive websites using the latest web technologies.
+                    </p>
+                </div>
+                <div class="services__card">
+                    <i class="ri-brush-line services__icon"></i>
+                    <h3 class="services__title">Graphic Design</h3>
+                    <p class="services__description">
+                        Designing logos, brochures, and other marketing materials to enhance your brand identity.
+                    </p>
+                </div>
+            </div>
+        </section>
 
          <!--==================== PROJECTS ===================-->
          <section class="projects section" id="projects">
