Add new services to the services section: Mobile App Development, SEO Optimization, and Illustration

--- a/index.html
+++ b/index.html
@@ -176,6 +176,27 @@
                         Designing logos, brochures, and other marketing materials to enhance your brand identity.
                     </p>
                 </div>
+                <div class="services__card">
+                    <i class="ri-smartphone-line services__icon"></i>
+                    <h3 class="services__title">Mobile App Development</h3>
+                    <p class="services__description">
+                        Developing high-quality mobile applications for both iOS and Android platforms.
+                    </p>
+                </div>
+                <div class="services__card">
+                    <i class="ri-search-line services__icon"></i>
+                    <h3 class="services__title">SEO Optimization</h3>
+                    <p class="services__description">
+                        Improving your website's visibility on search engines to attract more organic traffic.
+                    </p>
+                </div>
+                <div class="services__card">
+                    <i class="ri-paint-brush-line services__icon"></i>
+                    <h3 class="services__title">Illustration</h3>
+                    <p class="services__description">
+                        Creating custom illustrations and artwork to enhance your visual content.
+                    </p>
+                </div>
             </div>
         </section>
 
