Add scroll down buttons for services section and update navigation links

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   </ul>
                </div>
             </div>
-            <a href="#projects" class="about__scroll">
+            <a href="#services" class="about__scroll">
                 <div class="about__scroll-box">
                     <i class="ri-arrow-down-s-line"></i>
                 </div>
@@ -198,6 +198,11 @@
                     </p>
                 </div>
             </div>
+            <a href="#projects" class="services__scroll">
+                <div class="services__scroll-box">
+                    <i class="ri-arrow-down-s-line"></i>
+                </div>
+            </a>
         </section>
 
          <!--==================== PROJECTS ===================-->
