Refactor services section: update

--- a/index.html
+++ b/index.html
@@ -165,45 +165,87 @@
             </h2>
             <div class="services__container container grid">
                 <div class="services__card">
-                    <i class="ri-pencil-ruler-2-line services__icon"></i>
-                    <h3 class="services__title">UI/UX Design</h3>
+                    <i class="ri-user-line services__icon"></i>
+                    <h3 class="services__title">User Experience (UX) & Interaction Design</h3>
                     <p class="services__description">
-                        Creating visually appealing and user-friendly interfaces for web and mobile applications.
+                        Crafting intuitive and engaging user interactions across digital and physical platforms.
                     </p>
                 </div>
                 <div class="services__card">
-                    <i class="ri-code-s-slash-line services__icon"></i>
-                    <h3 class="services__title">Web Development</h3>
+                    <i class="ri-device-line services__icon"></i>
+                    <h3 class="services__title">Tangible & Embodied Interaction Design</h3>
                     <p class="services__description">
-                        Building responsive and interactive websites using the latest web technologies.
+                        Designing physical-digital experiences, interactive installations, or smart objects.
                     </p>
                 </div>
                 <div class="services__card">
-                    <i class="ri-brush-line services__icon"></i>
-                    <h3 class="services__title">Graphic Design</h3>
+                    <i class="ri-tools-line services__icon"></i>
+                    <h3 class="services__title">Prototyping & Rapid Ideation</h3>
                     <p class="services__description">
-                        Designing logos, brochures, and other marketing materials to enhance your brand identity.
-                    </p>
-                </div>
-                <div class="services__card">
-                    <i class="ri-smartphone-line services__icon"></i>
-                    <h3 class="services__title">Mobile App Development</h3>
-                    <p class="services__description">
-                        Developing high-quality mobile applications for both iOS and Android platforms.
+                        Creating functional prototypes using digital tools, hardware, or mixed materials.
                     </p>
                 </div>
                 <div class="services__card">
                     <i class="ri-search-line services__icon"></i>
-                    <h3 class="services__title">SEO Optimization</h3>
+                    <h3 class="services__title">Usability Testing & Human-Centered Research</h3>
                     <p class="services__description">
-                        Improving your website's visibility on search engines to attract more organic traffic.
+                        Conducting research and testing to improve user experiences in various contexts.
                     </p>
                 </div>
                 <div class="services__card">
-                    <i class="ri-paint-brush-line services__icon"></i>
-                    <h3 class="services__title">Illustration</h3>
+                    <i class="ri-code-s-slash-line services__icon"></i>
+                    <h3 class="services__title">Creative Coding & Generative Design</h3>
                     <p class="services__description">
-                        Creating custom illustrations and artwork to enhance your visual content.
+                        Using code to create interactive visuals, installations, or experimental interfaces.
+                    </p>
+                </div>
+                <div class="services__card">
+                    <i class="ri-vibration-line services__icon"></i>
+                    <h3 class="services__title">Multimodal Interaction & Haptic Feedback Design</h3>
+                    <p class="services__description">
+                        Designing experiences that incorporate sound, touch, and movement.
+                    </p>
+                </div>
+                <div class="services__card">
+                    <i class="ri-vr-line services__icon"></i>
+                    <h3 class="services__title">Immersive Experiences (VR, AR, MR)</h3>
+                    <p class="services__description">
+                        Designing interactions for virtual, augmented, or mixed reality applications.
+                    </p>
+                </div>
+                <div class="services__card">
+                    <i class="ri-smartphone-line services__icon"></i>
+                    <h3 class="services__title">Smart & Interactive Product Design</h3>
+                    <p class="services__description">
+                        Developing IoT-enabled or sensor-based interactive products.
+                    </p>
+                </div>
+                <div class="services__card">
+                    <i class="ri-computer-line services__icon"></i>
+                    <h3 class="services__title">Physical Computing & Embedded Systems</h3>
+                    <p class="services__description">
+                        Creating interactive experiences using Arduino, Raspberry Pi, or other hardware.
+                    </p>
+                </div>
+                <div class="services__card">
+                    <i class="ri-lightbulb-line services__icon"></i>
+                    <h3 class="services__title">Speculative & Future Interaction Design</h3>
+                    <p class="services__description">
+                        Conceptualizing innovative design solutions for emerging technologies.
+                    </p>
+                </div>
+                <div class="services__card">
+                    <i class="ri-layout-line services__icon"></i>
+                    <h3 class="services__title">Design Systems & Experience Strategy</h3>
+                    <p class="services__description">
+                        Structuring cohesive interaction principles across products and services.
+                    </p>
+                </div>
+                <div class="services__card">
+                    <i class="ri-palette-line services__icon"></i>
+                    <h3 class="services__title">Experimental & Artistic Interaction Design</h3>
+                    <p class="services__description">
+                        Exploring new forms of digital and physical interaction in art, media, and performance.
                     </p>
                 </div>
             </div>
