--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <link rel="stylesheet" href="assets/css/styles.css">
 
       <!-- Swiper CSS -->
-      <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+      <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
       <title>Portfolio Website Christophe</title>
    </head>
@@ -257,6 +259,7 @@
         </section>
 
          <!--==================== PROJECTS ===================-->
+         <!--
          <section class="projects section" id="projects">
             <h2 class="section__title-3" style="text-align: center; width: 100%;">
                <span>Projects</span>
@@ -395,12 +398,11 @@
                         </div>
                     </article>
                 </div>
-                <!-- Add Arrows -->
                 <div class="swiper-button-next projects__gallery-arrow projects__gallery-arrow--right"></div>
                 <div class="swiper-button-prev projects__gallery-arrow projects__gallery-arrow--left"></div>
             </div>
          </section>
-
+        -->
          <!--==================== CONTACT ====================-->
          <section class="contact section" id="contact">
             <h2 class="section__title-4" style="text-align: center; width: 100%;">
@@ -450,7 +452,7 @@
       <script src="https://unpkg.com/scrollreveal"></script>
       
       <!-- Swiper JS -->
-      <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
